--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 <body>
     <header>
         <nav class="container">
-            <a href="#" class="brand-logo valing-wrapper">
-                <img class="responsive-img left" src="#" alt="blog logo">
+            <a href="#" class="brand-logo valign-wrapper">
+                <img class="responsive-img left" src="assets/img/Logo.jpg" alt="blog logo">
             </a>
+            <ul class="right valign-wrapper">
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a class="btn waves-effect" href="#">Sign in</a></li>
+            </ul>
         </nav>
+        <section class="header-main-pic"></section>
     </header>
 
     <!-- Compiled and minified JavaScript -->
