--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         </nav>
         <section class="header-main-pic"></section>
     </header>
+    <main class="container">
+        <section>
+            <div class="section">
+                <div class="row">
+                    <div class="col m7 input-filed input-container">
+                        <input id="search" type="text">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
