Creating home cards.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="right valign-wrapper">
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a class="btn waves-effect" href="#">Sign in</a></li>
+                <li><a class="btn waves-effect red" href="#">Sign in</a></li>
             </ul>
         </nav>
         <section class="header-main-pic"></section>
@@ -34,9 +34,99 @@
             <div class="section">
                 <div class="row">
                     <div class="col m7 input-filed input-container">
-                        <input id="search" type="text">
+                        <i class="material-icons">search</i>
+                        <input id="search" type="text" placeholder="search article">
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/card1.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                                    class="material-icons">keyboard_arrow_right</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/card1.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                                    class="material-icons">keyboard_arrow_right</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/card1.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                                    class="material-icons">keyboard_arrow_right</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/card1.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                                    class="material-icons">keyboard_arrow_right</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/card1.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                                    class="material-icons">keyboard_arrow_right</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/img/card1.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                                    class="material-icons">keyboard_arrow_right</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </article>
+                
             </div>
         </section>
     </main>
