--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <li><a class="btn waves-effect red" href="#">Sign in</a></li>
             </ul>
         </nav>
-        <section class="header-main-pic"></section>
+        <section class="header-main-pic z-depth-2"></section>
     </header>
     <main class="container">
         <section>
             <div class="section">
                 <div class="row">
-                    <div class="col m7 input-filed input-container">
+                    <div class="col m7 input-field input-container">
                         <i class="material-icons">search</i>
                         <input id="search" type="text" placeholder="search article">
                     </div>
@@ -59,7 +59,7 @@
                 <article class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/img/card1.jpg">
+                            <img src="assets/img/card2.jpg">
                             <span class="card-title">Card Title</span>
                             <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
@@ -73,7 +73,7 @@
                 <article class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/img/card1.jpg">
+                            <img src="assets/img/card3.jpg">
                             <span class="card-title">Card Title</span>
                             <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
@@ -87,7 +87,7 @@
                 <article class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/img/card1.jpg">
+                            <img src="assets/img/card4.jpg">
                             <span class="card-title">Card Title</span>
                             <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
@@ -101,7 +101,7 @@
                 <article class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/img/card1.jpg">
+                            <img src="assets/img/card5.jpg">
                             <span class="card-title">Card Title</span>
                             <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
@@ -115,7 +115,7 @@
                 <article class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/img/card1.jpg">
+                            <img src="assets/img/card6.jpg">
                             <span class="card-title">Card Title</span>
                             <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
@@ -126,10 +126,37 @@
                         </div>
                     </div>
                 </article>
-                
+
             </div>
         </section>
     </main>
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
+                        content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3"
+                                href="https://platzi.com/@andres-campuzano-garzon/">Platzi profile</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/campuzanoCOL">Twitter</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2020 Andrés Campuzano
+                <a class="grey-text text-lighten-4 right" href="https://platzi.com/@andres-campuzano-garzon/">Platzi
+                    profile</a>
+            </div>
+        </div>
+    </footer>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
