--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
 <body>
     <header>
         <nav class="container">
-            <a href="#" class="brand-logo valign-wrapper">
+            <a href="index.html" class="brand-logo valign-wrapper">
                 <img class="responsive-img left" src="assets/img/Logo.jpg" alt="blog logo">
             </a>
             <ul class="right valign-wrapper">
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a class="btn waves-effect red" href="#">Sign in</a></li>
+                <li><a class="btn waves-effect red" href="signout.html">Sign out</a></li>
             </ul>
         </nav>
-        <section class="header-main-pic z-depth-2"></section>
+        <!-- header picture -->
+        <section class="header-main-pic z-depth-2">/section>
+
     </header>
     <main class="container">
         <section>
@@ -47,7 +49,7 @@
                         <div class="card-image">
                             <img src="assets/img/card1.jpg">
                             <span class="card-title">Card Title</span>
-                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red" href="post.html"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
                         </div>
                         <div class="card-content">
@@ -61,7 +63,7 @@
                         <div class="card-image">
                             <img src="assets/img/card2.jpg">
                             <span class="card-title">Card Title</span>
-                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red" href="post.html"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
                         </div>
                         <div class="card-content">
@@ -75,7 +77,7 @@
                         <div class="card-image">
                             <img src="assets/img/card3.jpg">
                             <span class="card-title">Card Title</span>
-                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red" href="post.html"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
                         </div>
                         <div class="card-content">
@@ -89,7 +91,7 @@
                         <div class="card-image">
                             <img src="assets/img/card4.jpg">
                             <span class="card-title">Card Title</span>
-                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red" href="post.html"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
                         </div>
                         <div class="card-content">
@@ -103,7 +105,7 @@
                         <div class="card-image">
                             <img src="assets/img/card5.jpg">
                             <span class="card-title">Card Title</span>
-                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red" href="post.html"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
                         </div>
                         <div class="card-content">
@@ -117,7 +119,7 @@
                         <div class="card-image">
                             <img src="assets/img/card6.jpg">
                             <span class="card-title">Card Title</span>
-                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red"><i
+                            <a class="btn-floating pulse halfway-fab waves-effect waves-light red" href="post.html"><i
                                     class="material-icons">keyboard_arrow_right</i></a>
                         </div>
                         <div class="card-content">
