--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <!-- header picture -->
-        <section class="header-main-pic z-depth-2">/section>
+        <section class="header-main-pic z-depth-2"></section>
 
     </header>
     <main class="container">
