--- a/post.html
+++ b/post.html
@@ -22,11 +22,12 @@
                 <img class="responsive-img left" src="assets/img/Logo.jpg" alt="blog logo">
             </a>
             <ul class="right valign-wrapper">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact</a></li>
+                <!-- <li><a href="#">About us</a></li>
+                <li><a href="#">Contact</a></li> -->
                 <li><a class="btn waves-effect red" href="signout.html">Sign out</a></li>
             </ul>
         </nav>
+                <!-- header picture -->
         <section class="header-main-pic z-depth-2"></section>
     </header>
     <main class="container">
