--- a/signout.html
+++ b/signout.html
@@ -22,8 +22,8 @@
                 <img class="responsive-img left" src="assets/img/Logo.jpg" alt="blog logo">
             </a>
             <ul class="right valign-wrapper">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact</a></li>
+                <!-- <li><a href="#">About us</a></li>
+                <li><a href="#">Contact</a></li> -->
                 <li><a class="btn waves-effect red" href="signout.html">Sign out</a></li>
             </ul>
         </nav>
