--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="right valign-wrapper">
                 <!-- <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li> -->
-                <li><a class="btn waves-effect red" href="signout.html">Sign out</a></li>
+                <li><a class="btn waves-effect red" href="signup.html">Sign up</a></li>
             </ul>
         </nav>
         <!-- header picture -->
