--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post</title>
+    <title>Sign up</title>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -24,13 +24,13 @@
             <ul class="right valign-wrapper">
                 <!-- <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li> -->
-                <li><a class="btn waves-effect red" href="signout.html">Sign out</a></li>
+                <li><a class="btn waves-effect red" href="signup.html">Sign up</a></li>
             </ul>
         </nav>
         <section class="container">
             <div class="row signout-title">
                 <div class="col s12">
-                    <h1 class="center-align">Sign out now</h1>
+                    <h1 class="center-align">Sign up now</h1>
                 </div>
             </div>
         </section>
