--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <!-- <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li> -->
                 <li><a class="btn waves-effect red" href="signup.html">Sign up</a></li>
+                <li><a class="btn waves-effect red" href="signin.html">Sign in</a></li>
             </ul>
         </nav>
         <!-- header picture -->
