--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,10 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-storage.js"></script>
 
 </head>
 
@@ -25,6 +29,7 @@
                 <!-- <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li> -->
                 <li><a class="btn waves-effect red" href="signup.html">Sign up</a></li>
+                <li><a class="btn waves-effect red" href="signin.html">Sign in</a></li>
             </ul>
         </nav>
         <section class="container">
@@ -61,7 +66,18 @@
                                 <label for="password">Password</label>
                             </div>
                         </div>
-                        <div class="section">
+                        <div class="row">
+                            <div class="col s12">
+                                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                                    <i class="material-icons right">send</i> 
+                                  </button>
+                            </div>
+                            <div class="col s12">
+                                <a href="signin.html">Have already an account?</a>
+                            </div>
+                        </div>
+
+                        <!-- <div class="section">
                             <h3 class="center-align">Which content matters for you?</h3>
                         </div>
                         <div class="section">
@@ -148,7 +164,7 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </form>
                 </div>
             </div>
